Fix box class assignments and adjust alignment in FlexBox layout

--- a/css/layouts/flexbox/style.css
+++ b/css/layouts/flexbox/style.css
@@ -14,7 +14,7 @@ body{
     flex-wrap: wrap; */
     /* flex-flow: row wrap ; */
     justify-content: space-around;
-    align-items :end;
+    align-items :center;
     align-content: space-around;
 
 }
@@ -28,7 +28,26 @@ body{
     margin: 8px;
 }
 
+.container .box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    color: white;
+}
 .container .box1{
     /* flex-grow: 2; */
     flex-shrink: 2;
 }
+
+.box1{
+    order: 1;
+}
+.boxb{
+    order: -1;
+}
+
+.box3{
+    order: -10;
+}
+
